<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="doogetha">Doogetha</string>
    <string name="welcome_title">Willkommen bei Doogetha</string>
    <string name="welcome_intro">Doogetha erlaubt es dir, beliebige Aktivitäten mit Freunden, Bekannten und unbekannten Personen zu planen.\n\nBitte drücke auf Fortfahren, um Doogetha auf diesem Gerät einzurichten.</string>
    <string name="welcome_continue">Fortfahren</string>
    <string name="register_intro">Damit du Doogetha verwenden kannst, musst du dich einmalig am Doogetha-Server registrieren. Dazu benötigst du nur eine E-Mail-Adresse - mehr nicht.\n\nBitte beachte, dass die E-Mail-Adresse gleichzeitig auch deine Nutzerkennung sein wird und stelle sicher, dass niemand außer du selbst Zugriff auf dieses Mailkonto hat.</string>
    <string name="emailaddress">E-Mail-Adresse</string>
    <string name="doregisterwait">Doogetha erstellt nun für dieses Gerät ein neues Schlüsselpaar zur Authentifizierung und sendet den öffentlichen Schlüssel zusammen mit deiner E-Mail-Adresse zum Server. Dies kann einen Moment dauern&#8230;</string>
    <string name="register_confirm1">Vielen Dank. Der Doogetha-Server hat soeben eine E-Mail an deine Adresse versendet.\n\nUm deine Identität zu bestätigen, klicke bitte auf den Bestätigungslink in der E-Mail und gib auf der Bestätigungsseite den folgenden dreistelligen PIN ein:</string>
    <string name="register_confirm2">Drücke danach den Anmelden-Button, um dich einzuloggen.</string>
    <string name="pin123">PIN: 123</string>
    <string name="login">Anmelden</string>
    <string name="settings">\nEinstellungen</string>
    <string name="cancelregistration">Abbrechen</string>
    <string name="app_name">Doogetha</string>
    <string name="loading">Daten laden&#8230;</string>
    <string name="pleaseregister">Your login credentials are currently unknown. Please register using your email address.</string>
    <string name="sessioncreatefailed">Deine Login-ID ist unbekannt oder zwischenzeitlich auf einem anderen Gerät neu erstellt worden. Die Sitzung konnte nicht gestartet werden. Sollte der Fehler weiterhin bestehen, wähle bitte "Abmelden" in den Einstellungen und registriere dich erneut.</string>
    <string name="register">Registrieren</string>
    <string name="unregister">Abmelden</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="save">Speichern</string>
    <string name="reset">Zurücksetzen</string>
    <string name="deleteitem">Eintrag löschen</string>
    <string name="edititem">Eintrag bearbeiten</string>
    <string name="showitem">Eintrag anzeigen</string>
    <string name="createnewactivity">Neue\nAktivität&#8230;</string>
    <string name="currentactivities">Aktuelle\nAktivitäten</string>
    <string name="myactivities">Meine\nAktivitäten</string>
    <string name="myactivity">Meine Aktivität</string>
    <string name="activityof">Aktivität von</string>
    <string name="publicactivities">Community</string>
    <string name="process_delete">Löschen&#8230;</string>
    <string name="process_checkversion">Prüfe Version&#8230;</string>
    <string name="newversionavailable">Eine neue Version von Doogetha steht zur Verfügung.</string>
    <string name="newversionavailablemustupdate">Bitte installiere diese, um fortzufahren.</string>
    <string name="protocolversionincompatible">Diese Version von Doogetha ist veraltet und nicht mehr mit dem Doogetha-Server kompatibel. Bitte aktualisiere deine Doogetha-Installation.</string>
    <string name="servernotavailable">Server nicht erreichbar. Bitte prüfe deine Internetverbindung.</string>
    <string name="deleted">Gelöscht</string>
    <string name="surveyresetdone">Die Abstimmung wurde zurückgesetzt</string>
    <string name="notify_eventinvitation_tickertext">Neue Einladung erhalten</string>
    <string name="notify_eventinvitation_text">{0} hat dich eingeladen.</string>
    <string name="notify_eventupdate_tickertext">Aktivität wurde geändert</string>
    <string name="notify_eventupdate_text">Die Aktivität wurde geändert.</string>
    <string name="notify_eventconfirm_tickertext">{0} hat bestätigt</string>
    <string name="notify_eventconfirm_text_accepted">{0} nimmt teil.</string>
    <string name="notify_eventconfirm_text_declined">{0} hat abgesagt.</string>
    <string name="notify_surveyadded_tickertext">Neue Abstimmung</string>
    <string name="notify_surveyadded_text">Es gibt eine neue Abstimmung.</string>
    <string name="notify_surveyconfirm_tickertext">{0} hat abgestimmt</string>
    <string name="notify_surveyconfirm_text">{0} hat abgestimmt.</string>
    <string name="notify_surveyclosed_tickertext">Abstimmung geschlossen</string>
    <string name="notify_surveyclosed_text">Die Abstimmung wurde geschlossen.</string>
    <string name="notify_eventcommented_tickertext">{0} hat kommentiert</string>
    <string name="notify_eventcommented_text">{0}: {1}</string>
    <string name="clear_datetime">Datum löschen</string>
    <string name="please_enter_activity_name">Bitte gib einen Namen für die Aktivität ein.</string>
    <string name="already_added">Bereits hinzugefügt</string>
    <string name="address_being_verified">Adresse wird geprüft&#8230;</string>
    <string name="email_address_invalid">Ungültige E-Mail-Adresse</string>
    <string name="event_successfully_created">Die Aktivität wurde erfolgreich angelegt.</string>
    <string name="enter_survey_item">Auswahlmöglichkeit eingeben:</string>
    <string name="comment_one">\u2191 1 Kommentar \u2191</string>
    <string name="comments_n">\u2191 {0} Kommentare \u2191</string>
    <string name="reset_survey_confirm">Alle Abstimmergebnisse der Teilnehmer werden zurückgesetzt und die Abstimmung wieder geöffnet.</string>
    <string name="delete_event_confirm">Möchtest du die Aktivität wirklich löschen?</string>
    <string name="submit_selection">Auswahl übernehmen</string>
    <!-- New Activity Wizard -->
    <string name="newactwiz_base_title">Neue Aktivität erstellen</string>
    <string name="newactwiz_base_text">Doogetha wird dich nun Schritt für Schritt durch die Erstellung einer neuen Aktivität führen.\n\nFür die Aktivität kannst du zunächst einen Titel und optional eine kurze Beschreibung eingeben.</string>
    <string name="newactwiz_datetime_title">Zeitpunkt</string>
    <string name="newactwiz_datetime_text">Du kannst nun Datum und Uhrzeit der Aktivität festlegen.\n\nWenn der Zeitpunkt der Aktivität noch nicht feststeht, weil du diesen mit den anderen Teilnehmern abstimmen möchtest, dann lege noch kein Datum und keine Uhrzeit fest. Du kannst dann später eine Umfrage zur Terminfindung festlegen.</string>
    <string name="newactwiz_participants_title">Teilnehmer</string>
    <string name="newactwiz_participants_text">Als nächstes kannst du die Teilnehmer der Aktivität angeben.\n\nDu selbst bist automatisch ein Teilnehmer der Aktivität. Alle weiteren Teilnehmer müssen anhand ihrer E-Mail-Adresse hinzugefügt werden. Du kannst dazu Personen aus deinem Adressbuch auswählen oder E-Mail-Adressen manuell eingeben.</string>
    <string name="newactwiz_surveys_title">Abstimmungen</string>
    <string name="newactwiz_surveys_text">Zu deiner Aktivität kannst du nun eine beliebige Anzahl von Abstimmungen hinzufügen.\n\nMit Abstimmungen kannst du Termine vereinbaren oder beliebige Umfragen zu Teilaspekten deiner Aktivität durchführen.</string>
    <string name="newactwiz_done_title">Fertig</string>
    <string name="newactwiz_done_text">Klicke auf Speichern, um die Aktivität anzulegen und die Teilnehmer einzuladen.\n\nDie Teilnehmer werden sodann über E-Mail benachrichtigt und können die neue Aktivität in Doogetha aufrufen.</string>
    <string name="newactwiz_button_editbase">Titel und Beschreibung eingeben&#8230;</string>
    <string name="newactwiz_button_editdatetime">Zeitpunkt bearbeiten&#8230;</string>
    <string name="newactwiz_button_notnowdatetime">Jetzt nicht festlegen</string>
    <string name="newactwiz_button_editparticipants">Teilnehmer bearbeiten&#8230;</string>
    <string name="newactwiz_button_editsurveys">Abstimmungen eingeben&#8230;</string>
    <string name="newactwiz_button_notnowsurveys">Jetzt nicht / keine Abstimmungen</string>
    <string name="newactwiz_button_done">Speichern</string>
    <!-- PullRefreshableListView -->
    <string name="pull_to_refresh">Zum Aktualisieren ziehen</string>
    <string name="release_to_refresh">Jetzt loslassen</string>
    <string name="refreshing">Bitte warten&#8230;</string>
    <!-- Participants Activity -->
    <string name="editparticipants_title">Teilnehmer bearbeiten</string>
    <string name="editparticipants_addbuttonimagebutton">Teilnehmer hinzufügen</string>
    <!-- Doogetha Friends Activity -->
    <string name="doogethafriends_title">Deine Freunde bei Doogetha</string>
    <string name="doogethafriends_addbuttonimagebutton">Mail-Adresse manuell hinzufügen</string>
    <string name="doogethafriends_syncbuttonimagebutton">Freundeliste synchronisieren</string>
    <string name="doogethafriends_synchronizing">Deine Freundeliste wird aktualisiert</string>
    <string name="friends">Freunde</string>
</resources>
