<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/doogetha_bg" >
    
    <include android:id="@+id/dg_title" layout="@layout/dg_title"/>

    <com.doogetha.client.util.TitleBar android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:text="@string/doogethafriends_title"/>
	
	<LinearLayout android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    >

		<TextView
		    android:id="@+id/numFriendsLabel"
		    android:layout_weight="1"
		    android:layout_width="0dip"
		    android:layout_height="match_parent"
		    android:padding="5dip"
		    android:gravity="center_vertical"
		    android:text="@string/friends"
		    android:textColor="@android:color/black"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<ImageButton android:id="@+id/addbutton"
		    android:contentDescription="@string/doogethafriends_addbuttonimagebutton"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:src="@android:drawable/ic_input_add"
		    />
	    <ImageButton android:id="@+id/syncbutton"
		    android:contentDescription="@string/doogethafriends_syncbuttonimagebutton"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:src="@android:drawable/ic_popup_sync"
		    />
	</LinearLayout>
    
	<ListView android:id="@id/android:list"
	               android:layout_width="match_parent"
	               android:layout_height="0dip"
	               android:background="@color/doogetha_bg"
	               android:cacheColorHint="@color/doogetha_bg"
	               android:layout_weight="1"
	               android:drawSelectorOnTop="false"/>
	               
	<LinearLayout android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
		<Button android:id="@+id/editok"
		    android:layout_width="match_parent" 
		    android:layout_height="match_parent" 
	               android:layout_weight="0.5"
		    android:text="@string/submit_selection"
		    />
		<Button android:id="@+id/editcancel"
		    android:layout_width="match_parent" 
		    android:layout_height="match_parent" 
	               android:layout_weight="0.5"
		    android:text="@string/cancel"
		    />
	</LinearLayout>
</LinearLayout>