<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ded"
    >
    <LinearLayout android:layout_height="wrap_content"
    		      android:id="@+id/linearLayout1"
    		      android:layout_width="match_parent"
    		      android:baselineAligned="false"
    		      android:background="#222">
        <ImageView android:layout_height="wrap_content"
        		   android:id="@+id/imageView1"
        		   android:src="@drawable/icon" 
        		   android:layout_width="wrap_content">
        </ImageView>
        <TextView android:id="@+id/textView1"
                  android:textAppearance="?android:attr/textAppearanceLarge" 
                  android:text="Doogetha" android:layout_gravity="center" 
                  android:layout_height="wrap_content" 
                  android:layout_weight="0.0" 
                  android:layout_width="wrap_content" 
                  android:layout_marginLeft="10dip"
                  android:textColor="#ded">
        </TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall"
                  android:id="@+id/versionlabel"
                  android:text="Version ?.?.?" 
                  android:layout_width="match_parent" 
                  android:layout_height="match_parent"
                  android:gravity="right|bottom"
                  android:layout_margin="2dip"
                  android:textSize="11.0sp"
                  android:textColor="#ded">
        </TextView>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout2"
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:gravity="left">
        <Button android:layout_width="wrap_content" android:layout_margin="3dip" android:id="@+id/newactivitybutton" android:layout_height="wrap_content" android:singleLine="false" android:text="@string/createnewactivity">
        </Button>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
                  android:id="@+id/linearLayout3" 
                  android:layout_width="match_parent"
                  android:background="#606060">
        <TextView android:id="@+id/textView2" 
                  android:layout_width="match_parent" 
                  android:layout_margin="3dip" 
                  android:text="Aktuelle Aktivitäten" 
                  android:textColor="#fff"
                  android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    
<ListView android:id="@id/android:list"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="#ded"
               android:cacheColorHint="#ded"
               android:layout_weight="1"
               android:drawSelectorOnTop="false"/>

    <LinearLayout android:id="@+id/linearLayout3" 
                  android:layout_width="match_parent"
                  android:layout_height="3dip"
                  android:background="#606060">
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
                  android:id="@+id/linearLayout3" 
                  android:layout_width="match_parent">
        <Button android:layout_width="wrap_content" android:background="#beb" android:drawableTop="@drawable/button_activities" android:id="@+id/currentactivitiesbutton" android:layout_height="match_parent" android:singleLine="false" android:text="@string/currentactivities" android:layout_margin="3dip" android:padding="5dip"/>
        <Button android:layout_width="wrap_content" android:background="@android:color/transparent" android:drawableTop="@drawable/button_activities" android:id="@+id/myactivitiesbutton" android:layout_height="match_parent" android:singleLine="false" android:text="@string/myactivities" android:layout_margin="3dip" android:padding="5dip"/>
        <Button android:layout_width="wrap_content" android:background="@android:color/transparent" android:drawableTop="@drawable/button_activities" android:id="@+id/publicactivitiesbutton" android:layout_height="match_parent" android:singleLine="false" android:text="@string/publicactivities" android:layout_margin="3dip" android:padding="5dip"/>
    </LinearLayout>
</LinearLayout>
